--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,18 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PalTales" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.PalTales" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:fontFamily">@font/mizra</item>
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blackish</item>
-        <item name="colorPrimaryVariant">@color/redish</item>
+        <item name="colorPrimaryVariant">@color/light_redish</item>
         <item name="colorOnPrimary">@color/blackish</item>
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/greenish</item>
         <item name="colorSecondaryVariant">@color/greenish</item>
         <item name="colorOnSecondary">@color/greiesh</item>
-
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+        <item name="android:textSize">30sp</item>
     </style>
 </resources>
