--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PalTales" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.PalTales" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:fontFamily">@font/mizra</item>
 
         <!-- Primary brand color. -->
