--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blackish">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/blackish"
+    tools:context=".activities.Home">
 
     <ImageButton
         android:id="@+id/movies"
