--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blackish"
-    tools:context=".activities.CreateAccount">
+    tools:context=".activities.CreateAccountActivity">
 
     <ImageView
         android:id="@+id/imageView3"
