For the list layout create custom lists items

--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -1,78 +1,50 @@
-<!-- res/layout/list_item_movie.xml -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- list_item_book.xml -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/blackish">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.3"
-        android:orientation="vertical"
-        android:layout_marginStart="16dp">
-    <!-- Movie Image -->
     <ImageView
-        android:id="@+id/imageViewMovie"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/placeholder_image" />
+        android:id="@+id/movieCover"
+        android:layout_width="84dp"
+        android:layout_height="90dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/movies" />
 
-        <TextView
-            android:id="@+id/textViewMovieRating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rating: "
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
-    </LinearLayout>
-    <!-- Movie Details -->
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:layout_marginStart="16dp">
+        android:layout_toEndOf="@id/movieCover"
+        android:orientation="vertical">
 
-        <!-- Movie Name -->
         <TextView
-            android:id="@+id/textViewMovieName"
-            android:layout_width="wrap_content"
+            android:id="@+id/bookTitle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Movie Name"
+            android:textColor="@color/whitish"
             android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:text="Movie Name" />
+            android:textStyle="bold" />
 
-        <!-- Movie Description -->
         <TextView
-            android:id="@+id/textViewMovieDescription"
-            android:layout_width="wrap_content"
+            android:id="@+id/rating"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@android:color/white"
-            android:text="Movie Description" />
+            android:text="Rating"
+            android:textColor="@color/whitish"
+            android:textSize="16sp" />
 
-        <!-- Movie Rating -->
-
-        <!-- Movie Genre -->
         <TextView
-            android:id="@+id/textViewMovieGenre"
-            android:layout_width="wrap_content"
+            android:id="@+id/movieLink"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@android:color/white"
-            android:text="Genre: " />
-
-        <!-- Movie Date Published -->
-        <TextView
-            android:id="@+id/textViewMovieDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@android:color/white"
-            android:text="Date: " />
+            android:autoLink="web"
+            android:linksClickable="true"
+            android:text="Learn More"
+            android:textColor="@color/redish"
+            android:textSize="16sp" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
