make password hidden chars

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -7,15 +7,20 @@
     android:background="#FFFFFF"
     android:backgroundTint="@color/blackish"
     android:visibility="visible"
-    tools:context=".activities.LoginActivity">
+    tools:context=".activities.LoginActivity"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="19dp">
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="236dp"
-        android:layout_height="240dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="0dp"
+        android:layout_height="144dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="65dp"
+        app:layout_constraintBottom_toBottomOf="@+id/txtResult"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
@@ -24,112 +29,141 @@
         android:id="@+id/txtResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="64dp"
+        android:layout_marginTop="177dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/login"
-        android:textColor="@color/whitish"
+        android:textColor="@color/greiesh"
         android:textSize="48sp"
+        app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:hint="type here"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/whitish"
-        app:layout_constraintBottom_toBottomOf="@+id/mailLabel"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="@+id/mailLabel" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="200dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="10dp"
-        android:ems="10"
-        android:fontFamily="cursive"
-        android:hint="type here"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/passValidation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="24dp"
         android:fontFamily="cursive"
-        android:text="Wrong password"
+        android:text="@string/wrongpas"
         android:textColor="#ED1B1B"
-        android:textSize="18sp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/emailValidation" />
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/remeberMe"
+        app:layout_constraintEnd_toEndOf="@+id/remeberMe"
+        app:layout_constraintStart_toStartOf="@+id/pass"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="89dp"
         android:text="@string/pass"
         android:textColor="@color/whitish"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/mailLabel"
+        app:layout_constraintBottom_toTopOf="@+id/remeberMe"
+        app:layout_constraintEnd_toStartOf="@+id/password"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mailLabel" />
 
     <TextView
         android:id="@+id/emailValidation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="33dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="12dp"
         android:fontFamily="cursive"
-        android:text="Wrong Email"
+        android:text="@string/wrongus"
         android:textColor="#ED1B1B"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/password"
+        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
+        app:layout_constraintStart_toStartOf="@+id/mailLabel"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <TextView
         android:id="@+id/mailLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/email"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="273dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="72dp"
+        android:text="@string/username"
         android:textColor="@color/whitish"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/pass"
+        app:layout_constraintEnd_toStartOf="@+id/email"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtResult" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="84dp"
         android:backgroundTint="#959B999E"
         android:text="@string/login"
         android:textColor="@color/whitish"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.311" />
+        app:layout_constraintStart_toEndOf="@+id/dontHave"
+        app:layout_constraintTop_toBottomOf="@+id/remeberMe" />
 
     <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="331dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/remeberMe"
+        android:layout_width="237dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="185dp"
         android:text="@string/remeber"
         android:textColor="@color/whitish"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/pass" />
+
+    <Button
+        android:id="@+id/dontHave"
+        android:layout_width="0dp"
+        android:layout_height="98dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="21dp"
+        android:text="@string/dont"
+        android:textColor="@color/greiesh"
+        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/remeberMe" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="23dp"
+        android:layout_marginBottom="8dp"
+        android:ems="10"
+        android:textColor="@color/whitish"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/passValidation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pass"
+        app:layout_constraintTop_toBottomOf="@+id/emailValidation" />
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="28dp"
+        android:ems="10"
+        android:inputType="text"
+        android:textColor="@color/whitish"
+        app:layout_constraintBottom_toTopOf="@+id/emailValidation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/mailLabel"
+        app:layout_constraintTop_toBottomOf="@+id/txtResult" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
