--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -14,9 +14,10 @@
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.634" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -46,8 +47,8 @@
 
     <ListView
         android:id="@+id/list"
-        android:layout_width="365dp"
-        android:layout_height="483dp"
+        android:layout_width="352dp"
+        android:layout_height="568dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
