Refactor: Add inspirations & resources

--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -1,4 +1,8 @@
-<!-- list_item_book.xml -->
+<!--
+    Inspired by:
+    https://stackoverflow.com/questions/15832335/android-custom-row-item-for-listview
+
+    -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
