--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -1,3 +1,8 @@
+<!--
+    Inspired by:
+    https://stackoverflow.com/questions/15832335/android-custom-row-item-for-listview
+
+    -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
