--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -7,12 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:background="@color/blackish">
+    android:background="@color/blackish"
+    android:id="@+id/relLayBook">
 
     <ImageView
         android:id="@+id/bookCover"
-        android:layout_width="90dp"
-        android:layout_height="140dp"
+        android:layout_width="111dp"
+        android:layout_height="172dp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="16dp"
