--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -10,69 +10,81 @@
 
     <ImageView
         android:id="@+id/coverimage"
-        android:layout_width="0dp"
-        android:layout_height="289dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="97dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginBottom="95dp"
-        app:layout_constraintBottom_toTopOf="@+id/describtiontxt"
+        android:layout_width="298dp"
+        android:layout_height="300dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="58dp"
+        app:layout_constraintBottom_toBottomOf="@+id/url"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/titleItem"
+        app:layout_constraintVertical_bias="0.111"
         app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/titleItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="9dp"
+        android:layout_marginTop="36dp"
         android:text="Title"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/coverimage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/coverimage"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/describtiontxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="329dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="71dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="70dp"
         android:text="Describtion"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yearOrAuther" />
+        app:layout_constraintTop_toTopOf="@+id/url"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="73dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginBottom="64dp"
         android:backgroundTint="#959B999E"
         android:text="@string/backk"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/describtiontxt" />
 
     <TextView
         android:id="@+id/yearOrAuther"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="274dp"
+        android:layout_marginBottom="17dp"
         android:text="year or author"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/greiesh"
+        app:layout_constraintBottom_toTopOf="@+id/coverimage"
         app:layout_constraintEnd_toEndOf="@+id/coverimage" />
 
     <TextView
         android:id="@+id/url"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="21dp"
+        android:layout_width="327dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="140dp"
+        android:autoLink="web"
+        android:linksClickable="true"
         android:text="url"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="@+id/coverimage"
-        app:layout_constraintTop_toBottomOf="@+id/coverimage" />
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnBack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
