--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:background="@color/blackish">
+    android:background="@color/blackish"
+    android:id="@+id/relLayMovie">
 
     <ImageView
         android:id="@+id/movieCover"
